# astropix-analysis

./: .gitignore  CompairDecoder.py  Injection_Scan_Data_Reduction.py  Live_Decoder_and_Plotter.py  Live_Decoder_and_Plotter_README.md  Makefile  New_Source_Decoder.py  Post_Run_Decoding_grant.py  Quad_Chip_Decoder.py  Quad_Chip_Decoder_README.md  README.md  Source_Decoder.py  Source_Decoder_README.md  Source_Decoder_Wrapper.py  astropix3rowcol.py  astropix_v4_decoder_astep_fw.py  decode_copy.py  pyproject.toml  rowcolMatching_astropix_v3.py  setup.bat  setup.ps1  setup.sh  tools_grant.py
.github/workflows/: ci.yml  docs.yml
astropix_analysis/: __init__.py  _version.py  analysis.py  cli.py  fileio.py  fmt.py  hist.py  legacy.py  modeling.py  monitor.py  plt_.py  scan.py  sock.py
deprecated/: README.md  decode_copy.py
depricated/: Old_Source_Decoder.py
docs/: analysis.rst  api.rst  cli.rst  conf.py  develop.rst  fileio.rst  fmt.rst  hist.rst  index.rst  install.rst  legacy.rst  modeling.rst  monitor.rst  plt_.rst  reference.rst  release_notes.rst  sock.rst
rowcolmatch/: Makefile  astropix3rowcol.cpp  csv_io.cpp  csv_io.h  data_structs.h  main.cpp  rowcolmatch.cpp  rowcolmatch.h
sandbox/: README
tests/: test_analysis.py  test_decode.py  test_decode_quad_chip.py  test_decode_v3.py  test_decode_v4.py  test_fileio.py  test_fmt.py  test_hist.py  test_legacy.py  test_modeling.py
tests/data/: README
tests/data/20250507_085829/: 20250507_085829_data.apx  20250507_085829_data.csv  20250507_085829_data.ecsv  20250507_085829_data.fits  20250507_085829_data.hdf5  config_v4_none_20250507_085829.yml
tests/data/20250722_094253/: threshold_40mV_20250722-094253.apx
tests/data/20250723_092534/: 20250723_092534_data.apx  20250723_092534_data.csv  20250723_092534_data.ecsv  20250723_092534_data.fits  20250723_092534_data.hdf5  config_v4_none_20250723_092534.yml
tests/data/20250729_185248/: vinj0_th1030_20250729-185248.apx  vinj0_th1030_20250729-185248.csv
tests/data/decode/: test.csv
tests/data/quad_chip/: quad_chip_data.csv
tests/data/scan/tune_dac_0/: testconfig_v4_none_TuneDACs_20250722-123708.yml  threshold_100mV_20250722-123708.apx  threshold_105mV_20250722-123708.apx  threshold_110mV_20250722-123708.apx  threshold_115mV_20250722-123708.apx  threshold_120mV_20250722-123708.apx  threshold_125mV_20250722-123708.apx  threshold_130mV_20250722-123708.apx  threshold_135mV_20250722-123708.apx  threshold_140mV_20250722-123708.apx  threshold_145mV_20250722-123708.apx  threshold_150mV_20250722-123708.apx  threshold_155mV_20250722-123708.apx  threshold_160mV_20250722-123708.apx  threshold_165mV_20250722-123708.apx  threshold_170mV_20250722-123708.apx  (+26 more)
(+41 files in other folders)
