[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astropix-analysis"
version = "0.0.0"
dependencies = [
  "loguru",
  "numpy",
  "matplotlib",
  "scipy",
  "astropy",
  "pandas",
  "h5py",
  "pyyaml", # This seems to be necessary for astropy in Python 3.7
  "tqdm",
  "pydata-sphinx-theme"
]
requires-python = ">=3.7"
authors = [{name = "The astropix team"}]
maintainers = [{name = "The astropix team"}]
description = "Astropix analysis facilities"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["DAQ", "Physics", "detector", "data flow"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

# [project.optional-dependencies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]

[project.urls]
Homepage = "https://github.com/AstroPix/astropix-analysis"
#Documentation = ""
Repository = "https://github.com/AstroPix/astropix-analysis"
"Bug Tracker" = "https://github.com/AstroPix/astropix-analysis/issues"
#Changelog = ""

#[project.scripts]
#baldaquin = "baldaquin.cli:main"

# [project.gui-scripts]
# spam-gui = "spam:main_gui"
#
# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"
